// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="uv_l0r03j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <legend
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            >
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh52p uv_x6hyh57"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w26"
                >
                  <input
                    aria-invalid="false"
                    class="uv_adn1w28"
                    id="_r_1_"
                    name="Group.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh52p uv_x6hyh57"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w26"
                >
                  <input
                    aria-invalid="false"
                    class="uv_adn1w28"
                    id="_r_4_"
                    name="Group.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`groupField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u7 uv_toi52u5d"
      >
        <fieldset
          class="uv_l0r03j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u27 uv_toi52u5d"
          >
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52u1v uv_toi52u5d"
            >
              <div
                class="uv_toi52u0 uv_toi52u3v uv_toi52u2j uv_toi52u7d uv_toi52u1v uv_toi52u5d"
              >
                <legend
                  class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                >
                  ToggleGroupField events
                </legend>
                <span
                  class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow1k uv_m4c9ow3c"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u31 uv_toi52u2d uv_toi52u7d uv_toi52ud uv_toi52u5d"
            >
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh52p uv_x6hyh57"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w25"
                >
                  <input
                    aria-invalid="true"
                    class="uv_adn1w28"
                    id="_r_9_"
                    name="test.value-1"
                    type="checkbox"
                    value="value-1"
                  />
                </div>
              </label>
              <label
                aria-disabled="false"
                class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
              >
                <div
                  class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
                >
                  <div
                    class="uv_x6hyh50 uv_x6hyh52p uv_x6hyh57"
                    style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
                  >
                    <span
                      class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
                    >
                      value 1
                    </span>
                  </div>
                </div>
                <div
                  class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w25"
                >
                  <input
                    aria-invalid="true"
                    class="uv_adn1w28"
                    id="_r_c_"
                    name="test.value-2"
                    type="checkbox"
                    value="value-2"
                  />
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <p
          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owd uv_m4c9owl uv_m4c9own uv_m4c9ow1b uv_m4c9ow1n uv_m4c9ow3f"
        >
          This field is required
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
